trunk/Archive2/f9/261ef6f75901a7/output
main.cpp: In function 'int main()':
main.cpp:3:12: warning: variable 'ptr_void' set but not used [-Wunused-but-set-variable]
     void * ptr_void;
            ^
main.cpp: In function 'int main()':
main.cpp:9:5: error: redefinition of 'int main()'
 int main()
     ^
main.cpp:1:5: error: 'int main()' previously defined here
 int main()
     ^
main.cpp:13:13: error: invalid conversion from 'void*' to 'int*' [-fpermissive]
     ptr_int = ptr_2void;
             ^
